fix: layout style

--- a/src/pages/dashboard/index.less
+++ b/src/pages/dashboard/index.less
@@ -29,6 +29,10 @@
     &-breadcrumd {
       margin: 16px 0;
     }
+
+    &-footer {
+      text-align: center;
+    }
   }
 }
 
@@ -39,4 +43,6 @@
 
 .site-layout-background {
   background: #fff;
+  padding: 24px;
+  margin: 0;
 }
